feat: separate reservations by availability in getAll response